--- a/Solution1/Reloaded/Reloaded.csproj
+++ b/Solution1/Reloaded/Reloaded.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tasks\ReadDouble.cs" />
+    <Compile Include="Tasks\ConsoleDoubleValueProvider.cs" />
     <Compile Include="Tasks\Task0\TaskClass0.cs" />
     <Compile Include="Tasks\Task10\TaskClass10.cs" />
     <Compile Include="Tasks\Task11\TaskClass11.cs" />
