--- a/Solution1/Reloaded/Reloaded.csproj
+++ b/Solution1/Reloaded/Reloaded.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Tasks\Task15\Circle.cs" />
     <Compile Include="Tasks\Task15\Rectangle.cs" />
     <Compile Include="Tasks\Task15\TaskClass15.cs" />
+    <Compile Include="Tasks\Task16\Circle.cs" />
+    <Compile Include="Tasks\Task16\Rectangle.cs" />
+    <Compile Include="Tasks\Task16\TaskClass16.cs" />
     <Compile Include="Tasks\Task1\TaskClass1.cs" />
     <Compile Include="Tasks\Task2\TaskClass2.cs" />
     <Compile Include="Tasks\Task3\TaskClass3.cs" />
