--- a/Solution1/Reloaded/Reloaded.csproj
+++ b/Solution1/Reloaded/Reloaded.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +57,10 @@
     <Compile Include="Tasks\Task15\Circle.cs" />
     <Compile Include="Tasks\Task15\Rectangle.cs" />
     <Compile Include="Tasks\Task15\TaskClass15.cs" />
+    <Compile Include="Tasks\Task16fSandbox\ConsoleCountriesSearchReportWriter.cs" />
+    <Compile Include="Tasks\Task16fSandbox\CountriesRestApiClient.cs" />
+    <Compile Include="Tasks\Task16fSandbox\CountryDto.cs" />
+    <Compile Include="Tasks\Task16fSandbox\TaskClass16fSandbox.cs" />
     <Compile Include="Tasks\Task16\Circle.cs" />
     <Compile Include="Tasks\Task16\ConstructorAndInstantiationExamples.cs" />
     <Compile Include="Tasks\Task16\Rectangle.cs" />
