--- a/Solution1/Reloaded/Reloaded.csproj
+++ b/Solution1/Reloaded/Reloaded.csproj
@@ -61,6 +61,13 @@
     <Compile Include="Tasks\Task16a\GatunekKsiazki.cs" />
     <Compile Include="Tasks\Task16a\Ksiazka.cs" />
     <Compile Include="Tasks\Task16a\TaskClass16a.cs" />
+    <Compile Include="Tasks\Task16b\Ekran.cs" />
+    <Compile Include="Tasks\Task16b\Laptop.cs" />
+    <Compile Include="Tasks\Task16b\Procesor.cs" />
+    <Compile Include="Tasks\Task16b\Ram.cs" />
+    <Compile Include="Tasks\Task16b\Rozdzielczosc.cs" />
+    <Compile Include="Tasks\Task16b\TaskClass16b.cs" />
+    <Compile Include="Tasks\Task16b\TypRamu.cs" />
     <Compile Include="Tasks\Task16fSandbox\ConsoleCountriesSearchReportWriter.cs" />
     <Compile Include="Tasks\Task16fSandbox\CountriesRestApiClient.cs" />
     <Compile Include="Tasks\Task16fSandbox\CountryDto.cs" />
