--- a/Solution1/Reloaded/Reloaded.csproj
+++ b/Solution1/Reloaded/Reloaded.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Tasks\Task16b\Rozdzielczosc.cs" />
     <Compile Include="Tasks\Task16b\TaskClass16b.cs" />
     <Compile Include="Tasks\Task16b\TypRamu.cs" />
+    <Compile Include="Tasks\Task16c\FunkcjaLiniowa.cs" />
+    <Compile Include="Tasks\Task16c\TaskClass16c.cs" />
     <Compile Include="Tasks\Task16fSandbox\ConsoleCountriesSearchReportWriter.cs" />
     <Compile Include="Tasks\Task16fSandbox\CountriesRestApiClient.cs" />
     <Compile Include="Tasks\Task16fSandbox\CountryDto.cs" />
