--- a/Solution1/Reloaded/Reloaded.csproj
+++ b/Solution1/Reloaded/Reloaded.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Tasks\Task16b\TypRamu.cs" />
     <Compile Include="Tasks\Task16c\FunkcjaLiniowa.cs" />
     <Compile Include="Tasks\Task16c\TaskClass16c.cs" />
+    <Compile Include="Tasks\Task16d\LetterCaseChanger.cs" />
+    <Compile Include="Tasks\Task16d\LetterCaseType.cs" />
+    <Compile Include="Tasks\Task16d\RichText.cs" />
+    <Compile Include="Tasks\Task16d\TaskClass16d.cs" />
+    <Compile Include="Tasks\Task16d\TextOrderReverser.cs" />
+    <Compile Include="Tasks\Task16d\TextSeparator.cs" />
     <Compile Include="Tasks\Task16fSandbox\ConsoleCountriesSearchReportWriter.cs" />
     <Compile Include="Tasks\Task16fSandbox\CountriesRestApiClient.cs" />
     <Compile Include="Tasks\Task16fSandbox\CountryDto.cs" />
