--- a/Solution1/Reloaded/Reloaded.csproj
+++ b/Solution1/Reloaded/Reloaded.csproj
@@ -76,6 +76,9 @@
     <Compile Include="Tasks\Task16d\TaskClass16d.cs" />
     <Compile Include="Tasks\Task16d\TextOrderReverser.cs" />
     <Compile Include="Tasks\Task16d\TextSeparator.cs" />
+    <Compile Include="Tasks\Task16e\TaskClass16e.cs" />
+    <Compile Include="Tasks\Task16e\Vector.cs" />
+    <Compile Include="Tasks\Task16e\VectorMath.cs" />
     <Compile Include="Tasks\Task16fSandbox\ConsoleCountriesSearchReportWriter.cs" />
     <Compile Include="Tasks\Task16fSandbox\CountriesRestApiClient.cs" />
     <Compile Include="Tasks\Task16fSandbox\CountryDto.cs" />
