--- a/Solution1/Reloaded/Reloaded.csproj
+++ b/Solution1/Reloaded/Reloaded.csproj
@@ -98,6 +98,9 @@
     <Compile Include="Tasks\Task16\Rectangle.cs" />
     <Compile Include="Tasks\Task16\TaskClass16.cs" />
     <Compile Include="Tasks\Task1\TaskClass1.cs" />
+    <Compile Include="Tasks\Task26\TaskClass26a.cs" />
+    <Compile Include="Tasks\Task26\TaskClass26b.cs" />
+    <Compile Include="Tasks\Task26\TaskClass26c.cs" />
     <Compile Include="Tasks\Task2\TaskClass2.cs" />
     <Compile Include="Tasks\Task3\TaskClass3.cs" />
     <Compile Include="Tasks\Task4\TaskClass4.cs" />
