--- a/Solution1/Reloaded/Reloaded.csproj
+++ b/Solution1/Reloaded/Reloaded.csproj
@@ -104,7 +104,8 @@
     <Compile Include="Tasks\Task18\Cone.cs" />
     <Compile Include="Tasks\Task18\Cube.cs" />
     <Compile Include="Tasks\Task18\Cylinder.cs" />
-    <Compile Include="Tasks\Task18\ISolid.cs" />
+    <Compile Include="Tasks\Task18\ITotalArea.cs" />
+    <Compile Include="Tasks\Task18\IVolume.cs" />
     <Compile Include="Tasks\Task18\Sphere.cs" />
     <Compile Include="Tasks\Task18\TaskClass18.cs" />
     <Compile Include="Tasks\Task1\TaskClass1.cs" />
